# StageIoT

./: .gitignore  README.md  Tp_ LoRa_PyCom.ipynb  Tp_ LoRa_STM.ipynb  arborescence-fichiers-projet.md  capteurs_data.apk  lauch.sh  requirements.txt  setup.sh
App/: MQTT.py
App/demo/: demo.py
App/flutter_app/: pubspec.yaml
DepthAI/: depth.py  depthmesh.py  spatial_object_detection.py  test.py  testurl.py  testurl2.py
DepthAI/depthaipython/: depth.py  depthmesh.py  hello_world.py
DepthAI/yolop/: main.py
PlateformeCollecteDonnees/: .gitignore  Readme.md
PlateformeCollecteDonnees/examples/: share_neighbour_data.py
PlateformeCollecteDonnees/img/: Diagramme sans nom.drawio  diagramme serveur.drawio
Platformio/STM32/: platformio.ini
Raspberry/: recepteur.py  spatial_object_detection.py
STM/B-L072Z-LRWAN1_base/: .project  Makefile  make_and_run.sh
STM/B-L072Z-main/: .cproject  .mxproject  board-lora.ioc  board-lora.launch
STM/STM32CubeExpansion_LRWAN_V2.1.0/: .gitignore
STM/UART/: .cproject  .mxproject  UART.ioc  UART.launch
STM/project/: .cproject  .mxproject  .project  testLoRa.ioc  testLoRa.launch
StereoDepth/: OpenCVInstaller.sh
StereoDepth/Calibration/: CMakeLists.txt  cameraCalibration.py  grabStereoImages.cpp
StereoDepth/Depth/: CMakeLists.txt  live_disparity.cpp  stereoPipeline.cpp  stereoPipeline.hpp
Tests/: mqtt.py  test.py
Tests/DB/: testdb.py
Tests/filtrage kalman/: data.csv  generation_mesures.py  gps.csv  pendule.py  speed_mesurement.csv
UserApplication/: main.py
appli/object-detection/: local.properties
doc/: File_tree.md  README.md  diagramme Global.drawio  payloadFormat.md
doc/Jetson/: doc_jetson_fr.md  spatial-object-detection-doc_fr.md
doc/PyCom/: PyCom-documentation.md  documentation-pycom-fr.md
doc/api/: README.md  api_doc.md  documentation-api-fr.md
doc/client/: README.md
doc/esp32/: esp32-documentation.md  esp32-documentation_fr.md
doc/raspberry/: spatial-object-detection-doc.md
doc/server/: README.md  documentation-flask-fr.md  documentation-flask_fr.md  flask-app-documentation.md
droidcam-linux-client-master/: .gitignore  build.sh
droidcam-linux-client-master/src/: droidcam.c  settings.h  usb.c
pymakr/: Tp_ LoRa_PyCom.ipynb  Tp_ LoRa_STM.ipynb  main.py
yolop/: main.py
(+1322 files in other folders)
